fix spacing issue for sidebar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1269,7 +1269,7 @@ bottom: -10px;color: #6D6D6C;font-family: Calibri;font-size: 21px;position: abso
 .add_sec {
     background: none repeat scroll 0 0 #FFFFFF;
     float: left;
-    margin: 20px 0 0;
+    margin: 15px 0 0;
     width: 304px;
 }
 
@@ -3166,7 +3166,7 @@ body {
 
 
 .discover {
-    margin: 0 0 7px 0;
+   margin: 15px 0 0;
 }
 
 .no_results{
